# Task-manager

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_executor.py  0003_alter_tasks_executor.py
task_manager/templates/: 404.html  apps_forms.html  base.html  confirm_delete.html  index.html  login.html  pagination.html
task_manager/templates/labels/: labels_list.html
task_manager/templates/statuses/: statuses_list.html
task_manager/templates/tasks/: tasks_detail.html  tasks_filter.html  tasks_list.html
task_manager/templates/users/: confirm_delete.html  customuser_list.html  password_change.html  signup.html  update.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py
