[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-extensions = "^3.2.3"
dj-database-url = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
